developing product category operation
